# scthing

./: Cargo.toml  README.md
example/: config.toml  patch.scd
src/: config.rs  framebuffer.rs  input.rs  main.rs  menu.rs  osc.rs  ui.rs
src/ui/: menu.rs  param.rs  patch.rs
