[package]
name = "noisemaker"
version = "0.1.0"
authors = ["Scott Nelson <scott@scottnelson.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.4.0"
libc = "0.2.62"
memmap = "0.7.0"
raqote = "0.7.3"
rosc = "0.2.0"
