[package]
name = "noisemaker"
version = "0.1.0"
authors = ["Scott Nelson <scott@scottnelson.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.6"
font-kit = "0.4.0"
libc = "0.2.62"
memmap = "0.7.0"
rand = "0.7.2"
raqote = "0.7.3"
rosc = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.5.3"
